# octario

./: .editorconfig  .gitignore  .gitreview  .yamllint  MANIFEST.in  Makefile  README.md  README.rst  ansible.cfg  component.cfg.example  groups  main.yml  octario.cfg  octario.yml  plugin.spec  project.config  requirements-test.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
callback_plugins/: human_log.py
cli/: __init__.py  component.py  exceptions.py  execute.py  logger.py  main.py  octario.py  tester.py  version.py
components_config/: example_component.yml
components_config/11/: defaults.yml  odl-odlparent
components_config/12/: cinder  component.yml  defaults.yml  glance  glance_store  manila  python-cinderclient  python-glanceclient  python-os-brick  python-saharaclient  python-swiftclient  sahara  sahara-image-elements  swift
doc/: configuration.md
docs/: add_scripts.md
ir-plugin/: osp_version_name.py
playbooks/: README.txt  api-with-patching.yml  api.yml  collect-logs.yml  collect_logs.yml  custom-role.yml  custom-tester.yml  custom.yml  dsvm-fullstack-with-patching.yml  dsvm-fullstack.yml  dsvm-functional-with-patching.yml  dsvm-functional.yml  functional-py35.yml  functional-with-patching.yml  functional.yml  manila_tester.yml  patch.yml  pep8.yml  robot-test-plan.yml  robot-tests-suite.yml  robot.yml  scenario.yml  tempect-rpm.yml  tempest-git.yml  tempest-rpm.yml  tempest.yml  test.yml  unit.yml  unittest.yml
samples/: component.cfg.sample  hosts.sample  octario.cfg.sample
tests/: hosts  sample.yml
(+639 files in other folders)
