[metadata]
name = octario
author = Red Hat, Inc
author-email = rhos-ci@redhat.com
maintainer = Red Hat, Inc
maintainer-email = rhos-ci@redhat.com
summary = Openstack Component Testing Ansible Roles
description-file = README.rst
home-page = https://github.com/redhat-openstack/octario
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP

keywords =
    openstack
    ansible
    infrared
    deployment
    automation

[bdist_wheel]
universal=1

[flake8]
max-line-length=160
exclude=build,.eggs,.tox
statistics=yes
ignore = D
